# pwa-learning

./: .gitignore  README.md
backend/: Makefile  db.js  index.js  package-lock.json  package.json  subscriptions.db
docs/: 01-backend-node.md  02-backend-fastapi.md  03-frontend.md
frontend/: Makefile  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx
meu-pwa/: index.html  package-lock.json  package.json  vite.config.ts
node/: .env.example  Makefile  package-lock.json  package.json  tsconfig.json
python/: .env.example  .gitignore  Makefile  pyproject.toml
python/src/: server.py
python/src/api/: app.py
python/src/api/dependencies/: __init__.py  auth.py  db.py
python/src/api/middlewares/: __init__.py  error_handler.py  logger.py
python/src/api/routers/: __init__.py  sse.py  webpush.py
python/src/controllers/: __init__.py  sse.py  webpush.py
python/src/core/: __init__.py  errors.py  settings.py
python/src/core/messages/: __init__.py  errors.py  success.py
python/src/db/: __init__.py  session.py
python/src/db/models/: __init__.py  subscription.py
python/src/db/repositories/: __init__.py  subscription.py
python/src/schemas/: __init__.py  sse.py  webpush.py
python/src/services/: __init__.py  sse.py  webpush.py
react/: .env.example  .gitignore  Makefile  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
react-vite/: package-lock.json  package.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
(+123 files in other folders)
