[tool.poetry]
name = "pwa-backend-fastapi"
version = "0.1.0"
description = "PWA backend — Web Push + SSE"
authors = ["Mauricio <mauriciobenjamin700@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"
pydantic-settings = "^2.6.0"
pywebpush = "^2.0.0"
sse-starlette = "^2.1.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13"
ruff = "^0.7"
pytest = "^8.3"
pytest-asyncio = "^0.24"
httpx = "^0.27"

[tool.poetry.scripts]
dev = "src.server:dev"
start = "src.server:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
